--- a/app/siscomando/templates/login.html
+++ b/app/siscomando/templates/login.html
@@ -5928,7 +5928,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
       </div>
       <div class="baseContent">
-        <login-box action="/login"></login-box>
+        <login-box action="/login/"></login-box>
       </div>      
       {% with messages = get_flashed_messages() %}
         {% if messages %}
