--- a/app/siscomando/templates/register.html
+++ b/app/siscomando/templates/register.html
@@ -4230,7 +4230,7 @@ content[select="[top]"]::content img.radial {
           <h3>Signup</h3>
           <p>%% greetings %%, %% name %%! </p>
           <p>Digite uma senha para finalizar o cadastro.</p> 
-          <form id="registerForm" name="form" action="/register" method="POST">
+          <form id="registerForm" name="form" action="/register/" method="POST">
             <input type="hidden" id="inviteID" name="invite" value="%% invite.pk %%">
             <paper-input-decorator label="Password" floatinglabel="">
               <input is="core-input" type="password" name="password" id="passwordInput" value="" label="password">
