--- a/app/siscomando/templates/src/app.html
+++ b/app/siscomando/templates/src/app.html
@@ -35,7 +35,7 @@
     <paper-spinner class="blue" active></paper-spinner>
   </div>
   -->  
-  <core-drawer-panel>   
+  <core-drawer-panel responsiveWidth="768px">   
     <div drawer>
       <core-header-panel>
         <!-- App context mini-header: you can to put logo app, name, etc.-->
