--- a/app/siscomando/templates/src/login.html
+++ b/app/siscomando/templates/src/login.html
@@ -29,7 +29,7 @@
           </div>
       </div>
       <div class="baseContent">
-        <login-box action="/login"></login-box>
+        <login-box action="/login/"></login-box>
       </div>      
       {% with messages = get_flashed_messages() %}
         {% if messages %}
