--- a/app/siscomando/templates/src/register.html
+++ b/app/siscomando/templates/src/register.html
@@ -36,7 +36,7 @@
           <h3>Signup</h3>
           <p>%% greetings %%, %% name %%! </p>
           <p>Digite uma senha para finalizar o cadastro.</p> 
-          <form id="registerForm" name="form" action="/register" method="POST">
+          <form id="registerForm" name="form" action="/register/" method="POST">
             <input type="hidden" id="inviteID" name="invite" value="%% invite.pk %%">
             <paper-input-decorator label="Password" floatingLabel>
               <input is="core-input" type="password" name="password" id="passwordInput" value="" label="password">
