Supported slash, and messages flash, etc

--- a/app/siscomando/templates/src/home.html
+++ b/app/siscomando/templates/src/home.html
@@ -373,7 +373,7 @@
     <span class="content">
         <p></lp-icons>We happy by you want to be invited!
         <lp-icons icon='social:cake' color="#979797"></lp-icons></p>
-        <form id="inviteForm" action="/request_invite" method="post">
+        <form id="inviteForm" action="/request_invite/" method="post">
           <paper-input-decorator label="Your Name">
               <input name="name" is="core-input">
           </paper-input-decorator>
