--- a/app/siscomando/templates/src/register.html
+++ b/app/siscomando/templates/src/register.html
@@ -34,7 +34,7 @@
       <div horizontal center-justified layout center>
         <div class="baseContent register">
           <h3>Signup</h3>
-          <p>%% greetings %%, %% name %%! </p>
+          <p>%% greetings %% %% name %%! </p>
           <p>Digite uma senha para finalizar o cadastro.</p> 
           <form id="registerForm" name="form" action="/register/" method="POST">
             <input type="hidden" id="inviteID" name="invite" value="%% invite.pk %%">
