--- a/app/siscomando/templates/home.html
+++ b/app/siscomando/templates/home.html
@@ -4404,7 +4404,7 @@ polyfill-next-selector {
     <span class="content">
         <p>We happy by you want to be invited!
         <lp-icons icon="social:cake" color="#979797"></lp-icons></p>
-        <form id="inviteForm" action="/request_invite" method="post">
+        <form id="inviteForm" action="/request_invite/" method="post">
           <paper-input-decorator label="Your Name">
               <input name="name" is="core-input">
           </paper-input-decorator>
