--- a/app/siscomando/templates/register.html
+++ b/app/siscomando/templates/register.html
@@ -4228,7 +4228,7 @@ content[select="[top]"]::content img.radial {
       <div horizontal="" center-justified="" layout="" center="">
         <div class="baseContent register">
           <h3>Signup</h3>
-          <p>%% greetings %%, %% name %%! </p>
+          <p>%% greetings %% %% name %%! </p>
           <p>Digite uma senha para finalizar o cadastro.</p> 
           <form id="registerForm" name="form" action="/register/" method="POST">
             <input type="hidden" id="inviteID" name="invite" value="%% invite.pk %%">
