--- a/app/siscomando/static/assets/css/app.css
+++ b/app/siscomando/static/assets/css/app.css
@@ -112,3 +112,10 @@ html /deep/ .hashLink {
   color: #47CACC !important;
   text-decoration: none;
 }
+
+html /deep/ .mentions.shortname  {
+  color: #47CACC !important;
+  text-decoration: none;
+  font-weight: 300 !important;
+}
+  
