Pre-release to new webapp

--- a/app/siscomando/templates/src/app.html
+++ b/app/siscomando/templates/src/app.html
@@ -77,6 +77,7 @@
       userData['avatar'] = "%% g.user.avatar %%";
       userData['shortname'] = "%% g.user.shortname %%";
       userData['email'] = "%% g.user.email %%";
+      // TODO: stores token after authenticated successful
       window.localStorage.setItem("User", JSON.stringify(userData));
 
       // Reload page
