Fixed type variable

--- a/app/siscomando/templates/app.html
+++ b/app/siscomando/templates/app.html
@@ -15215,9 +15215,9 @@ core-icon .pallete-icon-color .autumn {
       */
       getIssue: function() {
           var ajaxLocal = this.$.coreAjaxIssues;
-          if (ajaxLocal !== null) {
+          if (ajaxLocal.response !== null) {
               this.sseurl = siscomando.helpers.comments.stream.getUrlByIssue(ajaxLocal.response._id);
-          }          
+          }
       },
       /**
        * `setUrlOldest` defines an url with querystring page defined. The
